--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-# Conexión a la Base de Datos PostgreSQL
-# Lee las credenciales de las variables de entorno
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-
-# Configuración de Hibernate (el motor de JPA)
+spring.datasource.url=jdbc:postgresql://pos-finanzas.postgres.database.azure.com:5432/pos_fin?sslmode=require
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
