fix: corrección completa del sistema de inventario y funcionalidad de desactivar productos
- fix(backend): corrección de CORS para permitir método PATCH en desactivación de productos
- fix(backend): solución de consultas duplicadas en repositorios de historial de precios y costos
- fix(backend): corrección de validaciones y manejo de errores en ProductosController
- fix(frontend): implementación de filtros para mostrar solo productos activos
- fix(frontend): corrección de modales de creación y edición con Material-UI
- feat(backend): agregada migración automática de base de datos (DatabaseCleanupRunner)
- feat(backend): implementación de SecurityConfig para configuración de CORS
- docs: actualización completa de tasks.md con progreso de todas las correcciones
- chore: limpieza de archivos obsoletos y reorganización de estructura

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,18 @@
-spring.datasource.url=jdbc:postgresql://pos-finanzas.postgres.database.azure.com:5432/pos_fin?sslmode=require
-spring.jpa.hibernate.ddl-auto=update
+# # Datos que se suben a Github
+# spring.datasource.url=jdbc:postgresql://pos-finanzas.postgres.database.azure.com:5432/pos_fin?sslmode=require
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+
+# Datos que no se suben a Github (Para desarrollo local)
+# BORRAR ANTES DE SUBIR A GITHUB ----------------------------------
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+
+# Permitir que Hibernate maneje automáticamente las migraciones de esquema
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+# Ejecutar script de inicialización
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
