--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 
 # Datos que no se suben a Github (Para desarrollo local)
 # BORRAR ANTES DE SUBIR A GITHUB ----------------------------------
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+# spring.datasource.url=${DB_URL}
+# spring.datasource.username=${DB_USER}
+# spring.datasource.password=${DB_PASS}
 
 # Permitir que Hibernate maneje automáticamente las migraciones de esquema
 spring.jpa.hibernate.ddl-auto=none
