--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 # Ejecutar script de inicialización
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
+# spring.sql.init.mode=always
+# spring.sql.init.schema-locations=classpath:schema.sql
