--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,8 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 # Ejecutar script de inicialización
 # spring.sql.init.mode=always
 # spring.sql.init.schema-locations=classpath:schema.sql
