Comienzo de Punto de Ventas
- [x] Pantalla de Toma de Orden
- [x] Mostrar articulos y su stock
- [x] Agregar articulos al "carrito de compra"
- [x] Guardar orden
- [x] Verificar el guardado de las ordenes (momentaneas)
- [ ] Proceso de "Solicitar cuenta" (Guardar ahora si toda al venta y
modificar inventarios)
- [ ] Generación de ticket de compra

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,10 +4,10 @@
 # spring.jpa.show-sql=true
 
 # Datos que no se suben a Github (Para desarrollo local)
-# BORRAR ANTES DE SUBIR A GITHUB ----------------------------------
-# spring.datasource.url=${DB_URL}
-# spring.datasource.username=${DB_USER}
-# spring.datasource.password=${DB_PASS}
+# Variables de entorno para conexión a base de datos
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 # Permitir que Hibernate maneje automáticamente las migraciones de esquema
 spring.jpa.hibernate.ddl-auto=update
