--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# # Datos que se suben a Github
+# # Datos que se suben a Github (Para producción en Azure)
 # spring.datasource.url=jdbc:postgresql://pos-finanzas.postgres.database.azure.com:5432/pos_fin?sslmode=require
 # spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
@@ -10,9 +10,6 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
 # Permitir que Hibernate maneje automáticamente las migraciones de esquema
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Ejecutar script de inicialización
