--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
 
 # Archivo: docker-compose.yml
 services:
+  # Servicio de Base de Datos PostgreSQL
+  database:
+    container_name: pos_database
+    image: postgres:18
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${DB_NAME:-pos_finanzas}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASS:-postgres}
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
+    volumes:
+      # Usar la estructura recomendada para PostgreSQL 18+
+      - ./database:/var/lib/postgresql
+      # Directorio para backups y scripts de inicialización
+      - ./database/backups:/backups
+      - ./database/init:/docker-entrypoint-initdb.d
+    ports:
+      - "5433:5432"
+    networks:
+      - pos-network
+
   # Servicio del Backend de Java
   backend:
     container_name: pos_backend
@@ -11,6 +32,8 @@ services:
       - ./.env # Pasa las variables de entorno a la aplicación Spring Boot
     ports:
       - "8084:8080"
+    depends_on:
+      - database # Se asegura de que la base de datos se inicie antes que el backend
     networks:
       - pos-network
 
