feat: implementar infraestructura de testing y tests unitarios
- Configurar infraestructura completa de testing (JaCoCo, Vitest, pytest)
- Implementar 108 tests unitarios y de integración (100% pasando)
- Backend: 96 tests de services + 12 tests de controllers
- Cobertura: 29% total, 89% en capa de servicios
- Frontend: Vitest configurado con 2 tests de verificación
- ML Service: pytest configurado con 7 tests de verificación
- AuthController completamente testeado con JWT
- Servicios críticos cubiertos: Persona, Empleado, Compra, Producto, Venta, Workspace
- Documentación completa en docs/testing/BASELINE_COBERTURA.md

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,18 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# --- Testing y Cobertura ---
+# Frontend coverage
+/frontend/coverage/
+
+# Backend coverage (JaCoCo)
+/backend/target/site/jacoco/
+
+# ML Service
+/ml-prediction-service/venv/
+/ml-prediction-service/htmlcov/
+/ml-prediction-service/coverage.xml
+/ml-prediction-service/.coverage
+/ml-prediction-service/.pytest_cache/
+/ml-prediction-service/__pycache__/
