--- a/ml-prediction-service/requirements.txt
+++ b/ml-prediction-service/requirements.txt
@@ -14,3 +14,9 @@ psycopg2-binary>=2.9.6
 requests>=2.31.0
 python-dotenv>=1.0.0
 python-multipart>=0.0.6
+
+# Dependencias para testing
+pytest>=7.4.3
+pytest-cov>=4.1.0
+pytest-asyncio>=0.21.1
+httpx>=0.25.2
