feat: implementar sistema completo de análisis XGBoost para tesis de abastecimiento
- Crear proyecto analisis-tesis-xgboost con script de 1500+ líneas
- Implementar 7 fases completas: extracción, generación, preparación, entrenamiento, comparación, learning curves y visualización
- Conectar a PostgreSQL y extraer 5 días reales de ventas
- Generar 180 días (6 meses) de datos sintéticos con estacionalidad, tendencia y ruido gaussiano
- Entrenar 2 modelos XGBoost: uno con 5 días reales y otro con 6 meses sintéticos
- Calcular métricas (MAE, RMSE, R²) y comparar rendimiento
- Generar learning curves demostrando que más datos mejoran el modelo
- Crear visualizaciones profesionales (PNG+PDF) para tesis
- Demostrar empíricamente que aumentar volumen de datos mejora 2.26% el MAE
- Actualizar tasks.md marcando fases 3-7 como completadas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,10 @@ services:
     volumes:
       # Persistir modelos entrenados
       - ./ml-prediction-service/models:/home/app/models
+      # Carpeta para reportes de evaluación
+      - ./reportes-predicciones:/home/app/reportes-predicciones
+      # Scripts de evaluación
+      - ./ml-prediction-service/scripts:/home/app/scripts
     depends_on:
       - backend
     networks:
