--- a/ml-prediction-service/requirements.txt
+++ b/ml-prediction-service/requirements.txt
@@ -15,6 +15,10 @@ requests>=2.31.0
 python-dotenv>=1.0.0
 python-multipart>=0.0.6
 
+# Dependencias para visualización (evaluación de modelos)
+matplotlib>=3.8.0
+seaborn>=0.13.0
+
 # Dependencias para testing
 pytest>=7.4.3
 pytest-cov>=4.1.0
